<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/run1_edited"
    android:orientation="horizontal"
    android:weightSum="4">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <RelativeLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="222dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="111dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/md_white_1000"
                android:textColorHint="@color/activity_background"
                android:theme="@style/MyEditTextTheme" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/md_white_1000"
                android:textColorHint="@color/activity_background"
                android:theme="@style/MyEditTextTheme" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="287dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="285dp"
                android:layout_height="58dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:background="@drawable/custombuttonborder"
                android:text="@string/sign_in"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="166dp"
                android:layout_height="26dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:textSize="8dp"
                android:background="@drawable/custombuttonborder"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"

            android:weightSum="2.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/verify_email_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_email"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
